# zarr_test_fflies_simple

./: .gitignore  README.md  main.py  pyproject.toml  zarrr_testing.ipynb
simple_dataset.zarr/: .zattrs  .zmetadata
simple_dataset.zarr/latitude/: .zarray  .zattrs  0
simple_dataset.zarr/longitude/: .zarray  .zattrs  0
simple_dataset.zarr/ppt/: .zarray  .zattrs  0.0.0  1.0.0  2.0.0
simple_dataset.zarr/t/: .zattrs
simple_dataset.zarr/tmax/: .zattrs  0.0.0  1.0.0  2.0.0
simple_dataset.zarr/tmean/: .zarray  .zattrs  0.0.0  1.0.0  2.0.0
simple_dataset.zarr/tmin/: .zattrs  0.0.0  1.0.0  2.0.0
