[project]
name = "zarrtest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.18",
    "dask>=2025.4.0",
    "h5netcdf>=1.6.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "netcdf4>=1.7.2",
    "xarray>=2025.3.1",
    "zarr>=2.18.3",
]
